removed the state in the filter