@@ -20,6 +20,7 @@ import alfio.manager.OpenIdAuthenticationManager;
 import alfio.manager.RecaptchaService;
 import alfio.manager.system.ConfigurationManager;
 import alfio.manager.user.UserManager;
+import alfio.model.user.Organization;
 import alfio.model.user.Role;
 import alfio.model.user.User;
 import alfio.repository.user.AuthorityRepository;
@@ -29,6 +30,8 @@ import alfio.repository.user.join.UserOrganizationRepository;
 import com.auth0.jwt.JWT;
 import com.auth0.jwt.interfaces.Claim;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import lombok.AllArgsConstructor;
+import lombok.Getter;
 import org.apache.commons.lang3.StringUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -426,13 +429,6 @@ public class WebSecurityConfig {
             private final UserOrganizationRepository userOrganizationRepository;
             private final OrganizationRepository organizationRepository;
             private final OpenIdAuthenticationManager openIdAuthenticationManager;
-            private String idToken;
-            private String subject;
-            private List<String> groups;
-            private String email;
-            private boolean isAdmin;
-            private Set<Role> alfioRoles;
-            private Map<String, Set<String>> alfioOrganizationAuthorizations;
 
             private OpenIdCallbackLoginFilter(OpenIdAuthenticationManager openIdAuthenticationManager,
                                               AntPathRequestMatcher requestMatcher, AuthenticationManager authenticationManager,
@@ -463,29 +459,28 @@ public class WebSecurityConfig {
                 chain.doFilter(request, response);
             }
 
-            private void updateOrganizations(String username, HttpServletResponse response) throws IOException {
-                Optional<Integer> userId = userRepository.findIdByUserName(username);
+            private void updateOrganizations(OpenIdAlfioUser alfioUser, HttpServletResponse response) throws IOException {
+                Optional<Integer> userId = userRepository.findIdByUserName(alfioUser.getEmail());
                 if (userId.isEmpty()) {
                     String message = "Error: user not saved into the database";
                     logger.error(message);
                     response.sendRedirect(openIdAuthenticationManager.buildLogoutUrl());
                 }
 
-                Set<Integer> databaseOrganizationIds = organizationRepository.findAllForUser(username).stream()
+                Set<Integer> databaseOrganizationIds = organizationRepository.findAllForUser(alfioUser.getEmail()).stream()
                     .map(org -> org.getId()).collect(Collectors.toSet());
 
-                if (isAdmin) {
+                if (alfioUser.isAdmin()) {
                     databaseOrganizationIds.forEach(orgId -> userOrganizationRepository.removeOrganizationUserLink(userId.get(), orgId));
                     return;
                 }
 
-
-                Set<Integer> organizationIds = alfioOrganizationAuthorizations.keySet().stream()
+                Set<Integer> organizationIds = alfioUser.getAlfioOrganizationAuthorizations().keySet().stream()
                     .map(organizationRepository::findByNameOpenId)
                     .filter(Optional::isPresent)
                     .map(Optional::get)
                     .filter(Objects::nonNull)
-                    .map(org -> org.getId())
+                    .map(Organization::getId)
                     .collect(Collectors.toSet());
 
                 databaseOrganizationIds.stream()
@@ -502,42 +497,33 @@ public class WebSecurityConfig {
                     .forEach(orgId -> userOrganizationRepository.create(userId.get(), orgId));
             }
 
-            private void clearClassState() {
-                idToken = "";
-                subject = "";
-                groups = null;
-                email = null;
-                isAdmin = false;
-                alfioRoles = new HashSet<>();
-                alfioOrganizationAuthorizations = new HashMap<>();
-            }
-
-            private void extractAlfioRoles() {
+            private Set<Role> extractAlfioRoles(Map<String, Set<String>> alfioOrganizationAuthorizations) {
+                Set<Role> alfioRoles = new HashSet<>();
                 //FIXME at the moment, the authorizations are NOT based on the organizations, they are global
                 alfioOrganizationAuthorizations.keySet().stream()
-                    .map(org -> alfioOrganizationAuthorizations.get(org))
+                    .map(alfioOrganizationAuthorizations::get)
                     .forEach(authorizations ->
                         authorizations.stream().map(auth -> Role.fromRoleName("ROLE_" + auth))
                             .forEach(alfioRoles::add));
+                return alfioRoles;
             }
 
-            private void createUser() {
-                userRepository.create(email, passwordEncoder.encode(subject), email, email, email, true, User.Type.INTERNAL, null, null);
+            private void createUser(OpenIdAlfioUser user) {
+                userRepository.create(user.getEmail(), passwordEncoder.encode(user.getSubject()), user.getEmail(), user.getEmail(), user.getEmail(), true, User.Type.INTERNAL, null, null);
             }
 
-            private void populateFieldsFrom(Map<String, Object> claims) {
-                idToken = (String) claims.get(openIdAuthenticationManager.getIdTokenNameParameter());
+            private OpenIdAlfioUser extractUserInfoFrom(Map<String, Object> claims) {
+                String idToken = (String) claims.get(openIdAuthenticationManager.getIdTokenNameParameter());
 
                 Map<String, Claim> idTokenClaims = JWT.decode(idToken).getClaims();
-                subject = idTokenClaims.get(openIdAuthenticationManager.getSubjectNameParameter()).asString();
-                email = idTokenClaims.get(openIdAuthenticationManager.getEmailNameParameter()).asString();
+                String subject = idTokenClaims.get(openIdAuthenticationManager.getSubjectNameParameter()).asString();
+                String email = idTokenClaims.get(openIdAuthenticationManager.getEmailNameParameter()).asString();
                 List<String> groupsList = idTokenClaims.get(openIdAuthenticationManager.getGroupsNameParameter()).asList(String.class);
-                groups = groupsList.stream().filter(group -> group.startsWith("ALFIO_")).collect(Collectors.toList());
+                List<String> groups = groupsList.stream().filter(group -> group.startsWith("ALFIO_")).collect(Collectors.toList());
+                boolean isAdmin = groups.contains(ALFIO_ADMIN);
 
-                if (groups.contains(ALFIO_ADMIN)) {
-                    isAdmin = true;
-                    alfioRoles.add(Role.ADMIN);
-                    return;
+                if (isAdmin) {
+                    return new OpenIdAlfioUser(idToken, subject, email, true, Set.of(Role.ADMIN), null);
                 }
 
                 if(groups.isEmpty()){
@@ -546,9 +532,11 @@ public class WebSecurityConfig {
                     throw new RuntimeException(message);
                 }
 
-                List<String> alfioRoles = idTokenClaims.get(openIdAuthenticationManager.getAlfioGroupsNameParameter()).asList(String.class);
-                for (String alfioRole : alfioRoles) {
-                    String[] orgRole = alfioRole.split("/");
+                List<String> alfioOrganizationAuthorizationsRaw = idTokenClaims.get(openIdAuthenticationManager.getAlfioGroupsNameParameter()).asList(String.class);
+                Map<String, Set<String>> alfioOrganizationAuthorizations = new HashMap<>();
+
+                for (String alfioOrgAuth : alfioOrganizationAuthorizationsRaw) {
+                    String[] orgRole = alfioOrgAuth.split("/");
                     String organization = orgRole[1];
                     String role = orgRole[2];
 
@@ -556,9 +544,10 @@ public class WebSecurityConfig {
                         alfioOrganizationAuthorizations.get(organization).add(role);
                         continue;
                     }
-                    alfioOrganizationAuthorizations.put(organization, new HashSet<>(Arrays.asList(role)));
+                    alfioOrganizationAuthorizations.put(organization, Set.of(role));
                 }
-                extractAlfioRoles();
+                Set<Role> alfioRoles = extractAlfioRoles(alfioOrganizationAuthorizations);
+                return new OpenIdAlfioUser(idToken, subject, email, false, alfioRoles, alfioOrganizationAuthorizations);
             }
 
             private Map<String, Object> retrieveClaims(String claimsUrl, String code) throws IOException, InterruptedException {
@@ -584,8 +573,6 @@ public class WebSecurityConfig {
 
             @Override
             public Authentication attemptAuthentication(HttpServletRequest request, HttpServletResponse response) throws AuthenticationException, IOException, ServletException {
-                clearClassState();
-                
                 String code = request.getParameter(openIdAuthenticationManager.getCodeNameParameter());
                 if (code == null) {
                     throw new IllegalArgumentException("authorization code cannot be null");
@@ -600,19 +587,30 @@ public class WebSecurityConfig {
                     throw new RuntimeException(e);
                 }
 
-                populateFieldsFrom(claims);
+                OpenIdAlfioUser alfioUser = extractUserInfoFrom(claims);
 
-                if (!userManager.usernameExists(email)) {
-                    createUser();
+                if (!userManager.usernameExists(alfioUser.getEmail())) {
+                    createUser(alfioUser);
                 }
-                updateRoles(alfioRoles, email);
-                updateOrganizations(email, response);
+                updateRoles(alfioUser.getAlfioRoles(), alfioUser.getEmail());
+                updateOrganizations(alfioUser, response);
 
-                List<GrantedAuthority> authorities = alfioRoles.stream().map(Role::getRoleName)
+                List<GrantedAuthority> authorities = alfioUser.getAlfioRoles().stream().map(Role::getRoleName)
                     .map(SimpleGrantedAuthority::new).collect(Collectors.toList());
-                OpenIdAlfioAuthentication authentication = new OpenIdAlfioAuthentication(authorities, idToken, subject, email, openIdAuthenticationManager.buildLogoutUrl());
+                OpenIdAlfioAuthentication authentication = new OpenIdAlfioAuthentication(authorities, alfioUser.getIdToken(), alfioUser.getSubject(), alfioUser.getEmail(), openIdAuthenticationManager.buildLogoutUrl());
                 return getAuthenticationManager().authenticate(authentication);
             }
+        }
+
+        @Getter
+        @AllArgsConstructor
+        private static class OpenIdAlfioUser {
+            private final String idToken;
+            private final String subject;
+            private final String email;
+            private final boolean isAdmin;
+            private final Set<Role> alfioRoles;
+            private final Map<String, Set<String>> alfioOrganizationAuthorizations;
         }
 
         private static class OpenIdAuthenticationProvider implements AuthenticationProvider {
